--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,700;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,700;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap");
 
 * {
     margin: 0;
@@ -6,9 +7,13 @@
     box-sizing: border-box;
 }
 
-input, button {
+input,
+button {
     border: 0;
     padding: 0;
     outline: none;
 }
 
+body {
+    font-family: "Rubik", sans-serif;
+}
